--- a/.verb.md
+++ b/.verb.md
@@ -4,11 +4,8 @@
 
 {%= include("install-npm", {save: true}) %}
 
-## Run tests
-
-```bash
-npm test
-```
+## Running tests
+{%= include("tests") %}
 
 ## Usage
 
@@ -16,12 +13,14 @@ npm test
 var cmd = require('{%= name %}');
 ```
 
-Say you want to run [lint-deps](https://github.com/jonschlinkert/lint-deps) programmatically,
-and you want to exclude the `test` directory from the scan. Just do:
+**Example**
+
+Install some npm modules:
 
 ```js
-cmd({cmd: 'deps', args: ['-e', 'test']});
-//=> 'deps -e test'
+cmd({cmd: 'npm', args: ['i', 'foo', 'bar', '--save']});
+// runs the command:
+//=> 'npm i foo bar --save'
 ```
 
 ## Contributing
