--- a/.verb.md
+++ b/.verb.md
@@ -23,6 +23,14 @@ cmd({cmd: 'npm', args: ['i', 'foo', 'bar', '--save']});
 //=> 'npm i foo bar --save'
 ```
 
+Optional callback:
+
+```js
+cmd({cmd: 'npm', args: ['i', 'foo', 'bar', '--save']}, function(err) {
+  // do stuff
+});
+```
+
 ## Contributing
 Pull requests and stars are always welcome. For bugs and feature requests, [please create an issue]({%= bugs.url %})
 
