--- a/.verb.md
+++ b/.verb.md
@@ -2,6 +2,7 @@
 
 > {%= description %}
 
+## Install
 {%= include("install-npm", {save: true}) %}
 
 ## Running tests
@@ -13,9 +14,9 @@
 var cmd = require('{%= name %}');
 ```
 
-**Example**
+**Examples**
 
-Install some npm modules:
+Install npm modules:
 
 ```js
 cmd({cmd: 'npm', args: ['i', 'foo', 'bar', '--save']});
