--- a/.verb.md
+++ b/.verb.md
@@ -32,8 +32,11 @@ cmd({cmd: 'npm', args: ['i', 'foo', 'bar', '--save']}, function(err) {
 });
 ```
 
+## Other useful CLI projects
+{%= related(verb.related.list) %}  
+
 ## Contributing
-Pull requests and stars are always welcome. For bugs and feature requests, [please create an issue]({%= bugs.url %})
+{%= include("contributing") %}
 
 ## Author
 {%= include("author") %}
