--- a/.verb.md
+++ b/.verb.md
@@ -14,22 +14,25 @@
 var cmd = require('{%= name %}');
 ```
 
-**Examples**
+### Examples
 
 Install npm modules:
 
+**async**
+
 ```js
-cmd({cmd: 'npm', args: ['i', 'foo', 'bar', '--save']});
-// runs the command:
-//=> 'npm i foo bar --save'
+commands({cmd: 'npm', args: ['i', 'isobject', '--save']}, function(err) {
+  // runs the command:
+  //=> 'npm i isobject --save'
+});
 ```
 
-Optional callback:
+**sync**
 
 ```js
-cmd({cmd: 'npm', args: ['i', 'foo', 'bar', '--save']}, function(err) {
-  // do stuff
-});
+cmd.sync({cmd: 'npm', args: ['i', 'isobject', '--save']});
+// runs the command:
+//=> 'npm i isobject --save'
 ```
 
 ## Other useful CLI projects
